handle sql transactions
